valobj/tests/ui/attributes/missing_normalize_test.rs
#[valobj::value_object(Normalize)]
pub struct UserId(u64);

fn main() {}
